--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     </p>
   </main>
 
-  <footer>© 2025 Michele Magaro</footer>
+  <footer>© mmmichele</footer>
 
   <!-- GSAP Animation -->
   <script defer>
