--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
     </div>
   </main>
 
-  <footer>© 2025 Michele Magaro</footer>
+  <footer>© mmmichele</footer>
 
   <!-- JS -->
   <script defer>
