--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
     <p>
       Michele is a Seattle-based multimedia artist whose work blends utilitarian form with experimental process. Exploring how everyday objects and overlooked moments can carry emotional and artistic weight, her practice invites connection and reflection on time, imperfection, and perspective.
     </p>
+    <img src="images/head.png" alt="Michele's face" class="face-pop">
   </main>
 
   <footer>© mmmichele</footer>
