--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,15 @@
   </title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F9DGMGHMFF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F9DGMGHMFF');
+</script>
 </head>
 <body class="subpage subpage-contact">
   <!-- Blobs -->
